--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-streamlit==1.28.0
-pandas==2.1.3
-numpy==1.26.2
-plotly==5.18.0
-scikit-learn==1.3.2
-joblib==1.3.2
-sqlite3
-matplotlib==3.8.2
-seaborn==0.13.0
-python-dotenv==1.0.0
+streamlit
+pandas
+numpy
+plotly
+scikit-learn
+joblib
